<resources>
    <string name="app_name">zsws</string>
    <string name="system_name">早收晚收系统</string>
    <string name="module_line">线路节点</string>
    <string name="module_task">网点任务</string>
    <string name="module_box">款箱信息</string>

    <string name="please_input_userName">请输入用户名</string>
    <string name="userName">用户名：</string>
    <string name="password">密码：</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="login">登  录</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="sure">确认</string>
    <string name="save">保存</string>
    <string name="upload">上传</string>
    <string name="uploading">上传中</string>
    <string name="setting">设置</string>
    <string name="task_transfer">任务交接</string>

    <string name="click_to_scan">点击扫描</string>
    <string name="node_name">名称：</string>
    <string name="node_status">状态：</string>
    <string name="node_name_start">出发</string>
    <string name="node_name_end">结束</string>
    <string name="scanned">已扫描</string>
    <string name="unscanned">未扫描</string>
    <string name="send_box">送出款箱</string>
    <string name="collect_box">收取款箱</string>
    <string name="middle_box">中调款箱</string>
    <string name="confirm_transfer">确认交接</string>
    <string name="scan_cashbox">扫描款箱</string>
    <string name="choose_net">选择网点</string>
    <string name="input_code">输入或按下SCAN键扫描条码...</string>

    <string name="userName_not_allowed_null">对不起，用户名不能为空</string>
    <string name="pwd_not_allowed_null">对不起，密码不能为空</string>
    <string name="scanned_error">对不起，条码不正确</string>
    <string name="scanned_already">您已扫描过此钞箱条码,无需重复扫描</string>
    <string name="uploaded_already">此任务已上传,不能重复扫描</string>
    <string name="barcode_not_allowed_null">扫描条码不能为空</string>
    <string name="scan_success">扫描成功</string>
    <string name="continue_scan">继续扫描</string>
    <string name="not_support_scan">此设备不支持扫描</string>
    <string name="start_node_not_scanned">系统检测到您未扫描开始节点，请问是否继续扫描结束节点？</string>

    <string name="comm_sharePre">获取sharePre缓存失败</string>
    <string name="logining">登录中...</string>
    <string name="downloading_task_info">任务信息下载中...</string>
    <string name="downloading_cashbox_info">钞箱信息下载中...</string>
    <string name="downloading_net_info">网店信息下载中...</string>

</resources>
