<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_taskList_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/frame_bg_white"
        android:orientation="vertical">


        <Button
            android:id="@+id/bt_sendBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_click_bg"
            android:text="@string/send_box"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_collectBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_click_bg"
            android:text="@string/collect_box"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_middleBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_click_bg"
            android:text="@string/middle_box"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>