<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_nodeScan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bg"
    android:padding="10dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/comm_edittext_bg_selector"
            android:drawableRight="@mipmap/barcode"
            android:hint="@string/click_to_scan"
            android:singleLine="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.grgbanking.baselib.ui.view.EditTextToDel
                android:id="@+id/et_inputCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/comm_edittext_bg_selector"
                android:drawableRight="@mipmap/barcode"
                android:hint="@string/input_code"
                android:singleLine="true" />

            <Button
                android:id="@+id/bt_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_click_bg"
                android:text="@string/sure"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="款箱列表"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_boxSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="计划3个,扫描2个" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <com.grgbanking.baselib.ui.view.AdaptScrViewListView
            android:id="@+id/asvlv_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:cacheColorHint="@color/white"
            android:divider="@null"
            android:listSelector="@color/white"
            android:scrollbars="none" />
    </LinearLayout>

</ScrollView>